force-app/main/default/objects/ssot__LoyaltyMemberTier__dlm/ssot__LoyaltyMemberTier__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>The benefit tier within the program to which a member is assigned.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Loyalty Program</referenceEntityGroup>
        <referenceEntityName>LoyaltyMemberTier</referenceEntityName>
        <referenceEntitySubjectArea>Loyalty Program</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>