force-app/main/default/objects/ssot__LoyaltyMemberTier__dlm/fields/ssot__LoyaltyMemberTierChangeTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyMemberTierChangeTypeId__c</fullName>
    <label>Loyalty Member Tier Change Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyMemberTierChangeTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>