force-app/main/default/objects/ssot__LoyaltyMemberTier__dlm/fields/ssot__rel_1697761181573_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761181573_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyMemberTier_LoyaltyTierId_map__rel</label>
    <referenceTo>ssot__LoyaltyTier__dlm</referenceTo>
    <relationshipLabel>LoyaltyMemberTier_LoyaltyTierId_map__rel</relationshipLabel>
    <relationshipName>rel_1697761181573_end</relationshipName>
    <type>Lookup</type>
</CustomField>