force-app/main/default/objects/ssot__LoyaltyMemberTier__dlm/fields/ssot__rel_1697761182768_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761182768_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramMember_Id_map_LoyaltyM_rel</label>
    <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramMember_Id_map_LoyaltyM_rel</relationshipLabel>
    <relationshipName>rel_1697761182768_end</relationshipName>
    <type>Lookup</type>
</CustomField>