force-app/main/default/objects/ssot__LoyaltyMemberTier__dlm/fields/ssot__TierExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__TierExpirationDate__c</fullName>
    <label>TierExpirationDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TierExpirationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>